# ChangeLog for app-misc/kanatest
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/kanatest/ChangeLog,v 1.21 2007/06/17 12:05:04 dertobi123 Exp $

  17 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  kanatest-0.4.2.ebuild:
  ppc stable, bug #181640

  17 Jun 2007; Raúl Porcel <armin76@gentoo.org> kanatest-0.4.2.ebuild:
  x86 stable wrt #181640

  14 Jun 2007; Christoph Mende <angelos@gentoo.org> kanatest-0.4.2.ebuild:
  Stable on amd64 wrt bug 181640

  11 Jun 2007; Markus Rothe <corsair@gentoo.org> kanatest-0.4.2.ebuild:
  Stable on ppc64; bug #181640

  11 Jun 2007; nixnut <nixnut@gentoo.org> ChangeLog:
  Stable on ppc wrt bug 181640

  18 May 2007; Peter Weller <welp@gentoo.org> kanatest-0.4.1.ebuild:
  Stable on amd64 wrt bug 174902

  01 May 2007; Markus Rothe <corsair@gentoo.org> kanatest-0.4.1.ebuild:
  Stable on ppc64; bug #174902

  28 Apr 2007; Raúl Porcel <armin76@gentoo.org> kanatest-0.4.1.ebuild:
  x86 stable wrt #174902

  28 Apr 2007; nixnut <nixnut@gentoo.org> kanatest-0.4.1.ebuild:
  Stable on ppc wrt bug 174902

*kanatest-0.4.2 (26 Apr 2007)

  26 Apr 2007; MATSUU Takuto <matsuu@gentoo.org> +kanatest-0.4.2.ebuild:
  Version bumped, bug #174902.

*kanatest-0.4.1 (18 Mar 2007)

  18 Mar 2007; MATSUU Takuto <matsuu@gentoo.org> +kanatest-0.4.1.ebuild:
  Version bumped, bug #161534.

*kanatest-0.4.0 (11 Jan 2007)

  11 Jan 2007; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +kanatest-0.4.0.ebuild:
  Version bump, #161534

  13 Oct 2005; Sven Wegener <swegener@gentoo.org> kanatest-0.3.6.ebuild:
  Added missing pkgconfig dependency.

  21 Jul 2005; David Holm <dholm@gentoo.org> kanatest-0.3.6.ebuild:
  Added to ~ppc.

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> kanatest-0.3.6.ebuild:
  Stable on ppc64

  04 Dec 2004; Markus Rothe <corsair@gentoo.org> kanatest-0.3.6.ebuild:
  Added ~ppc64 to KEYWORDS; bug #72914
