@@ -1,40 +1,24 @@
-DIST kanatest-0.3.6.tar.gz 725961 RMD160 a6358e7629a8037751e31dffc0141bca3a8b6e4e SHA1 4486784195f52e180bbb46b3944afc61fbd80143 SHA256 559c3d5e9336a56c9f83fcece75ab5211e62a1a868b3a6f539e9b7bd15f46576
-DIST kanatest-0.4.0.tar.gz 320473 RMD160 f1b305e0655209f146c40351f55b04e785b61d5c SHA1 e2fd42cadb5b784285f94f8f6cf3675d758fd077 SHA256 87fa1421470b6a26f4651f70e248a6ba6b8438a016aacd5ec5d1aff7934d1a7e
-DIST kanatest-0.4.1.tar.gz 334952 RMD160 99362ba76213d1fc082dad802ebce64e2f1e2077 SHA1 4f44991fefb3a3d97561d2fda43989eb0852c6ba SHA256 429c2bd35465b4582511b941d09f4c5f4576a0f8d0d9ccdd7f53e75fb1f65ac9
 DIST kanatest-0.4.2.tar.gz 335955 RMD160 71901a1d8aba44880ae168055227ab939c88ecbd SHA1 cca20787391a44d15acca496e4d795f8231da221 SHA256 c6b00757fd10d6ffea5bf250527192566f06725ff0e2636c9d25087f26e944c2
-EBUILD kanatest-0.3.6.ebuild 584 RMD160 81c0c412b752e10c31788ab5dbffd726004b4f89 SHA1 10f379b9545803f8a5d1d42732b841c9a59e5569 SHA256 c0ba70dec4a2eb677052b8ec12f54776993af99f7671f3c221fee6129c4ae4fa
-MD5 9b8d4c5787557b2703e69dcdffc97c20 kanatest-0.3.6.ebuild 584
-RMD160 81c0c412b752e10c31788ab5dbffd726004b4f89 kanatest-0.3.6.ebuild 584
-SHA256 c0ba70dec4a2eb677052b8ec12f54776993af99f7671f3c221fee6129c4ae4fa kanatest-0.3.6.ebuild 584
-EBUILD kanatest-0.4.0.ebuild 581 RMD160 d28feb0914250d8011cf65e3dc0a607611977c9f SHA1 90b383ad91d2fef0ff3b7f7863b27ff10decae1d SHA256 7377a89773860b473c2a8d4242575d276f2bcdad13c77e69a99f89350506b0de
-MD5 9a94a9eadf6d1174a8d37ad6e2130934 kanatest-0.4.0.ebuild 581
-RMD160 d28feb0914250d8011cf65e3dc0a607611977c9f kanatest-0.4.0.ebuild 581
-SHA256 7377a89773860b473c2a8d4242575d276f2bcdad13c77e69a99f89350506b0de kanatest-0.4.0.ebuild 581
-EBUILD kanatest-0.4.1.ebuild 645 RMD160 671ff3a826593e8a4922cd123da258eee5f1e1ce SHA1 5ea3ddced2a305c3fdb8c7a33ce6b011c2d8efcd SHA256 4355a3897167b8237c885dfb7e201cd7375911d3c1831df351fc5e79c6feeb9e
-MD5 c8d3485e9ae36b12b9f84bab6c09eb37 kanatest-0.4.1.ebuild 645
-RMD160 671ff3a826593e8a4922cd123da258eee5f1e1ce kanatest-0.4.1.ebuild 645
-SHA256 4355a3897167b8237c885dfb7e201cd7375911d3c1831df351fc5e79c6feeb9e kanatest-0.4.1.ebuild 645
+DIST kanatest-0.4.3.tar.gz 323448 RMD160 7b8052ff0ef492b4f5a84ee3a72bd7e0f811cfc3 SHA1 96e8f4b8f84f014b41113daf85c81b8a50f73c6a SHA256 f5852b4a9e3f59ba286237019ebdc905b53e22f309fc8967060d0a5be3ce50ff
 EBUILD kanatest-0.4.2.ebuild 651 RMD160 f314240c5319c56f6b09dd6800936f5227e0499c SHA1 062800f6b20005987811a70e66d3e4bb4ba55614 SHA256 4c36d70f4d9cf10171508350682793fb0f5bf4a980f6e3b5b0a1f7a71cef3578
 MD5 09b39e06e579efdeb0243c3d1bde5cf0 kanatest-0.4.2.ebuild 651
 RMD160 f314240c5319c56f6b09dd6800936f5227e0499c kanatest-0.4.2.ebuild 651
 SHA256 4c36d70f4d9cf10171508350682793fb0f5bf4a980f6e3b5b0a1f7a71cef3578 kanatest-0.4.2.ebuild 651
-MISC ChangeLog 2274 RMD160 a2781b1045a01e2973fc0d635c3ec382fe784390 SHA1 caa50ff9f0aca2a2815c94c1edad2c0f0cebe88c SHA256 b53f2013d2c957023ee822fe391b80e68dfd83fbc36d908c487d4c2e4a355187
-MD5 37318fafcd8d778100641062d865a7c7 ChangeLog 2274
-RMD160 a2781b1045a01e2973fc0d635c3ec382fe784390 ChangeLog 2274
-SHA256 b53f2013d2c957023ee822fe391b80e68dfd83fbc36d908c487d4c2e4a355187 ChangeLog 2274
+EBUILD kanatest-0.4.3.ebuild 772 RMD160 f6a4eb496d47c71e5220c62d9285d09307dd1a14 SHA1 df902b3694d94ce3a2b1bb0c1c745bb35b767c27 SHA256 12cab79c16bf41e91b7f09bd3098863cd64da82a3f8372bd062a273f4246559e
+MD5 e0521e0df34785c190465cb31b409698 kanatest-0.4.3.ebuild 772
+RMD160 f6a4eb496d47c71e5220c62d9285d09307dd1a14 kanatest-0.4.3.ebuild 772
+SHA256 12cab79c16bf41e91b7f09bd3098863cd64da82a3f8372bd062a273f4246559e kanatest-0.4.3.ebuild 772
+MISC ChangeLog 2491 RMD160 fb27ca2044b6888d0d9dd0c350c52514bfed77b7 SHA1 68bc7c508dde7e31c32a470ac5cdd8e861823c72 SHA256 1661ebcecfc0088bc3e82cd491ff8fd50f48cfe30a3608491147568839fae17f
+MD5 5e2ad122ccfeff130729a5adb88933d3 ChangeLog 2491
+RMD160 fb27ca2044b6888d0d9dd0c350c52514bfed77b7 ChangeLog 2491
+SHA256 1661ebcecfc0088bc3e82cd491ff8fd50f48cfe30a3608491147568839fae17f ChangeLog 2491
 MISC metadata.xml 156 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad SHA1 8ccc2b0f20743002b783b1f7b5162c71f7f54c2e SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad metadata.xml 156
 SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215 metadata.xml 156
-MD5 0342bdb5fa0a1defb796a716267a5c18 files/digest-kanatest-0.3.6 244
-RMD160 ac678bb4919ca939d5ac6f4d38e60108a619e820 files/digest-kanatest-0.3.6 244
-SHA256 75d9c460f6562e07a42e55d47fbfb54716ef8f3b1c7e36afe14563e91d87f288 files/digest-kanatest-0.3.6 244
-MD5 d932f278e5acf155a99fa2bf7663f1ff files/digest-kanatest-0.4.0 244
-RMD160 efb98ee5b84fdd16c8ab63392fec1ecb8e989993 files/digest-kanatest-0.4.0 244
-SHA256 013bd24831133e9e28a9c1367e8036ffc828cd7ce25f2fef722e03b8e95ace29 files/digest-kanatest-0.4.0 244
-MD5 2cbaea51e4ef8d630a3b32d074d8d4cf files/digest-kanatest-0.4.1 244
-RMD160 6bb70bf9086556254ecf65f617adb16ad0a9fe75 files/digest-kanatest-0.4.1 244
-SHA256 4de2b6f7774c0b82ca7d234b4cd946df11eb37545aac131e915ba91edcb57fcd files/digest-kanatest-0.4.1 244
 MD5 04d870326c9c5c81aba5eccbd1ac52bd files/digest-kanatest-0.4.2 244
 RMD160 7c025138af2f0c77d1017eee95327c48822aa701 files/digest-kanatest-0.4.2 244
 SHA256 d7f133460894ed1cc4176dee06ef1d7cf52912083697740c9111932b2064d572 files/digest-kanatest-0.4.2 244
+MD5 60e14824c181b84aca6da0ba31775b9d files/digest-kanatest-0.4.3 244
+RMD160 c84b21d75fa33e02d96f94bfef215a9282207d64 files/digest-kanatest-0.4.3 244
+SHA256 0e964ab8adb8480c23f2f1d6108b4dde4f2f2df186b2e336e32bad5d37cd3306 files/digest-kanatest-0.4.3 244
