@@ -1,3 +1,0 @@
-MD5 cd1eb1ce62a52cf69f4df9041a886794 kanatest-0.3.6.tar.gz 725961
-RMD160 a6358e7629a8037751e31dffc0141bca3a8b6e4e kanatest-0.3.6.tar.gz 725961
-SHA256 559c3d5e9336a56c9f83fcece75ab5211e62a1a868b3a6f539e9b7bd15f46576 kanatest-0.3.6.tar.gz 725961
