@@ -1,3 +1,0 @@
-MD5 2eb1f82c3cc80e009205a4bf802de713 kanatest-0.4.0.tar.gz 320473
-RMD160 f1b305e0655209f146c40351f55b04e785b61d5c kanatest-0.4.0.tar.gz 320473
-SHA256 87fa1421470b6a26f4651f70e248a6ba6b8438a016aacd5ec5d1aff7934d1a7e kanatest-0.4.0.tar.gz 320473
