@@ -1,3 +1,0 @@
-MD5 f9ec221c93eb173c9534b8586355a0b7 kanatest-0.4.1.tar.gz 334952
-RMD160 99362ba76213d1fc082dad802ebce64e2f1e2077 kanatest-0.4.1.tar.gz 334952
-SHA256 429c2bd35465b4582511b941d09f4c5f4576a0f8d0d9ccdd7f53e75fb1f65ac9 kanatest-0.4.1.tar.gz 334952
