@@ -1,0 +1,3 @@
+MD5 f41b133b4cc0bc05c6fec4a5692e2686 kanatest-0.4.3.tar.gz 323448
+RMD160 7b8052ff0ef492b4f5a84ee3a72bd7e0f811cfc3 kanatest-0.4.3.tar.gz 323448
+SHA256 f5852b4a9e3f59ba286237019ebdc905b53e22f309fc8967060d0a5be3ce50ff kanatest-0.4.3.tar.gz 323448
